--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "eslint": "8.40.0",
+    "bootstrap": "^5.2.3",
+    "eslint": "8.22.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   }
